--- a/Pronia-Tekrar-1/Pronia-Tekrar-1/Pronia-Tekrar-1.csproj
+++ b/Pronia-Tekrar-1/Pronia-Tekrar-1/Pronia-Tekrar-1.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
@@ -16,9 +17,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="MimeKit" Version="4.9.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Upload\Product\" />
     <Folder Include="wwwroot\Upload\Slider\" />
   </ItemGroup>
 
