--- a/Pronia-Tekrar-1/Pronia-Tekrar-1/Pronia-Tekrar-1.csproj
+++ b/Pronia-Tekrar-1/Pronia-Tekrar-1/Pronia-Tekrar-1.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\CartController1\**" />
+    <Content Remove="Views\CartController1\**" />
+    <EmbeddedResource Remove="Views\CartController1\**" />
+    <None Remove="Views\CartController1\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MailKit" Version="4.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
